Change maven model flags to strings to support property placeholders (#2634)
* Change maven model flags to strings to support property placeholders

* Increment model version on pom

* Builder for MavenRepository

* Dependency builders

Co-authored-by: Tyler Van Gorder <tkvangorder@users.noreply.github.com>
Co-authored-by: Sam Snyder <sam@moderne.io>